merge-upstream: fix color picking overlay not covering page

--- a/src/components/stage-wrapper/stage-wrapper.css
+++ b/src/components/stage-wrapper/stage-wrapper.css
@@ -2,8 +2,8 @@
 @import "../../css/colors.css";
 @import "../../css/z-index.css";
 
-.stage-wrapper {
-    /* prevents loading screen from leaking out in player only mode */
+.stage-wrapper.loading {
+    /* prevent loading screen from covering entire page when not in editor */
     position: relative;
 }
 
